# whatenc

./: .gitignore  README.md  pyproject.toml
training/: config.py  dataset.py  encoders.py  export.py  get_corpus.py  tokenizer.py  train.py
whatenc/: cli.py  features.py
