[project]
name = "whatenc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    
]

[project.optional-dependencies]
dev = [
    "build>=1.3.0",
    "twine>=6.2.0",
]

train = [
    "datasets>=4.3.0",
    "scikit-learn>=1.7.2",
    "skl2onnx>=1.19.1",
    "joblib>=1.5.2",
]

[project.scripts]
whatenc = "whatenc.cli:main"
